--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,18 @@ h1 {
 }
 
 .navbar {
+  align-items: center;
   border: 2px solid red;
+  display: flex;
+  justify-content: flex-end;
   height: 100px;
+}
+
+.navbar-menu {
+  display: flex;
+  list-style: none;
+}
+
+.navbar-menu li {
+  padding-right: 1em;
 }
