--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,12 @@
-body {
+html {
+  scroll-behavior: smooth;
 }
 
 footer {
   border: 2px solid yellow;
   align-items: center;
   display: flex;
-  height: 100px;
+  height: 50px;
   justify-content: center;
 }
 
@@ -13,6 +14,19 @@ h1 {
   display: flex;
   justify-content: center;
   padding: 1em;
+}
+
+.active {
+  box-shadow: 0 0 8px rgba(0,0,0,0.8);
+  z-index: 10;
+}
+
+.active h2 {
+  transform: scale(1.3);
+}
+
+.active p {
+  font-size: 1.3em;
 }
 
 .container {
@@ -36,7 +50,7 @@ h1 {
   border: 2px solid red;
   display: flex;
   justify-content: flex-end;
-  height: 100px;
+  height: 80px;
 }
 
 .navbar-menu {
